add apps with initial mf+ssr support

--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,10 @@
 {
   "$schema": "./node_modules/nx/schemas/workspace-schema.json",
   "version": 2,
-  "projects": {}
+  "projects": {
+    "module-federation": "libs/module-federation",
+    "remote1": "apps/remote1",
+    "shell": "apps/shell",
+    "webpack-mf": "libs/webpack-mf"
+  }
 }
