--- a/package.json
+++ b/package.json
@@ -18,13 +18,19 @@
     "@angular/forms": "~14.1.1",
     "@angular/platform-browser": "~14.1.1",
     "@angular/platform-browser-dynamic": "~14.1.1",
+    "@angular/platform-server": "~14.1.1",
     "@angular/router": "~14.1.1",
+    "@nguniversal/express-engine": "~14.0.3",
     "@nrwl/angular": "14.5.4",
+    "cors": "~2.8.5",
+    "express": "~4.18.1",
+    "node-fetch": "~2.6.7",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "~14.0.0",
     "@angular-devkit/build-angular": "~14.1.1",
     "@angular-eslint/eslint-plugin": "~14.0.0",
     "@angular-eslint/eslint-plugin-template": "~14.0.0",
@@ -32,6 +38,7 @@
     "@angular/cli": "~14.1.0",
     "@angular/compiler-cli": "~14.1.1",
     "@angular/language-service": "~14.1.1",
+    "@nguniversal/builders": "~14.0.3",
     "@nrwl/cli": "14.5.4",
     "@nrwl/cypress": "14.5.4",
     "@nrwl/eslint-plugin-nx": "14.5.4",
@@ -40,6 +47,8 @@
     "@nrwl/workspace": "14.5.4",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
+    "@types/node-fetch": "~2.6.2",
+    "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "cypress": "^10.2.0",
