--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "~14.1.1",
     "@angular/platform-server": "~14.1.1",
     "@angular/router": "~14.1.1",
-    "@module-federation/node": "https://github.com/module-federation/node.git#move_over_nextjs-mf_node",
+    "@module-federation/node": "0.0.1",
     "@nguniversal/express-engine": "~14.0.3",
     "@nrwl/angular": "14.5.4",
     "cors": "~2.8.5",
